fix: humberger + banner overflow

--- a/src/main-component/App/App.css
+++ b/src/main-component/App/App.css
@@ -539,7 +539,7 @@ button:focus {
     width: 100%;
   }
   .site-header .navbar-header button {
-    background-color: #000;
+    background-color: transparent;
     width: 40px;
     height: 35px;
     border: 0;
@@ -1026,6 +1026,7 @@ button:focus {
   position: relative;
   background-repeat: no-repeat;
   position: relative;
+  overflow: hidden;
 }
 
 @media (max-width: 767px) {
